--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,4 +1,10 @@
 @tailwind base;
 /* Write your global styles here, in PostCSS syntax */
 @tailwind components;
-@tailwind utilities
+@tailwind utilities;
+
+@layer base {
+  a {
+    @apply underline;
+  }
+}
